--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -213,7 +213,9 @@
 			<!-- Banner End -->
 			
 			<!-- Inner Content -->
-			<div class="inner-page padd">
+            {%  if user.is_authenticated %}
+            <h3>Hello {{ user.username }}, what would you like to eat today?</h3>
+			<div class="inner-page padd2">
 				
 				<!-- Gallery Start -->
 				
@@ -456,8 +458,28 @@
 				
 				<!-- Showcase End -->
 				
-			</div><!-- / Inner Page Content End -->	
-			
+			</div><!-- / Inner Page Content End -->
+			{%  else %}
+            <h3>Please login</h3>
+            <div class="row">
+                <div class="col-md-4 col-md-offset-4">
+                <h1>Sign In</h1>
+                <p>If you have not created an account yet, then please <a href="{% url 'account_signup' %}">sign up</a> first.</p>
+
+                <form class="login" method="POST" action="{% url 'account_login' %}">
+                  <input type="hidden" name="csrfmiddlewaretoken" value="d8oLNsV0KViILz8OeWpNRZ58TxNj5brD"> {% csrf_token %}
+                <div id="div_id_login" class="form-group"> <label for="id_login" class="control-label  requiredField">
+                                Login<span class="asteriskField">*</span> </label> <div class="controls "> <input autofocus="autofocus" class="textinput textInput form-control" id="id_login" name="login" placeholder="Username or e-mail" type="text"> </div> </div> <div id="div_id_password" class="form-group"> <label for="id_password" class="control-label  requiredField">
+                                Password<span class="asteriskField">*</span> </label> <div class="controls "> <input class="textinput textInput form-control" id="id_password" name="password" placeholder="Password" type="password"> </div> </div> <div class="form-group"> <div id="div_id_remember" class="checkbox"> <label for="id_remember" class=""> <input class="checkboxinput" id="id_remember" name="remember" type="checkbox">
+                                    Remember Me
+                                </label> </div> </div>
+                  <a class="btn btn-link button secondaryAction" href="{% url 'account_reset_password' %}">Forgot Password?</a>
+                  <a class="btn btn-link button secondaryAction" href="{% url 'account_signup' %}">Signup</a>
+                  <button class="primaryAction btn btn-default" type="submit">Sign In</button>
+                </form>
+                </div>
+            </div>
+            {%  endif %}
 			<!-- Footer Start -->
 			
 			<div class="footer padd">
@@ -529,7 +551,7 @@
 							<!-- Footer widget -->
 							<div class="footer-widget">
 								<!-- Heading -->
-								<h4>Contact Us</h4>
+								<h4><a href="{% url 'contact' %}">Contact Us</a></h4>
 								<div class="contact-details">
 									<!-- Address / Icon -->
 									<i class="fa fa-map-marker br-red"></i> <span>#768, 5th floor, N S Building,<br>Csm Block, Park Road,<br> Bangalore - 234567</span>
