successfully charge credit card on test Stripe account

--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -54,5 +54,17 @@
 		});
 
 		</script>
+        <script type="text/javascript" src="https://js.stripe.com/v2/"></script>
+
+        {% block script %}
+
+        {% endblock %}
+
+        <script>
+            $(document).ready(function(){
+                {% block jquery %}
+                {% endblock %}
+            });
+        </script>
 </body>
 </html>
